--- a/1-EntradaSalida/EntradaSalida-10.html
+++ b/1-EntradaSalida/EntradaSalida-10.html
@@ -57,7 +57,7 @@
 				<h3>
 					Debemos lograr tomar el importe por ID ,
 					</br>transformarlo a entero (parseInt), luego
-					</br>mostrar el importe con un decuento del 25 %. en el cuadro de texto "RESULTADO"
+					</br>mostrar el importe con un descuento del 25 %. en el cuadro de texto "RESULTADO"
 				</h3>
      
     </div>
